--- a/style.css
+++ b/style.css
@@ -73,9 +73,8 @@ h4 {
     padding-top: 100px;
     padding-left: 120px;
     line-height: 1.7;
-  /*  top: 50%;
-    left: 7%; */
 }
+
 
 .contact__address {
     padding-bottom: 30px;
@@ -207,6 +206,7 @@ ul {
     text-transform: uppercase;
     text-decoration: none;
     padding: 15px 30px;
+    margin-bottom: 30px;
     display: inline-block;
     border-radius: 100px;
     transition: all .4s;
@@ -216,7 +216,37 @@ ul {
     font-family: sans-serif;
     background-color: #001f3f;
 }
+
 .btn:active {
     transform: translateY(3px);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
   
+input {
+    border: 1px solid;
+    padding: 8px;
+    display: block;
+    width: 100%;
+    border-radius: 2px;
+}
+
+textarea {
+    border: 1px solid;
+    border-radius: 2px;
+}
+
+.form-heading {
+    font-size: 30px;
+}
+
+.error {
+    margin-top: 0;
+    padding-bottom: 10px;
+}
+
+#submit {
+    background-color: #001f3f;
+    color: #fff;
+    border-radius: 100px;
+    text-transform: uppercase;
+    width: 75%;
+}
